[tool.poetry]
name = "wxc_sdk"
version = "1.25.0"
description = "SDK for Webex APIs with special focus on Webex Calling specific endpoints"
license = 'MIT'
authors = ["Johannes Krohn <jkrohn@cisco.com>"]
maintainers = ["Johannes Krohn <jkrohn@cisco.com>"]
readme = 'README.rst'
homepage = 'https://github.com/jeokrohn/wxc_sdk'
documentation = 'https://wxc-sdk.readthedocs.io'
keywords = ['Webex', 'Webex Calling', 'Webex Teams', 'Webex Meetings', 'Webex Devices', 'Webex Control Hub',
    'Webex Admin', 'Webex Site Admin', 'Webex Site', 'Webex Site Devices', 'Python', 'API', 'SDK']
classifiers = ["Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Conferencing",
    "Topic :: Communications :: Telephony"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pydantic = "^2.0.0"
requests = "^2.27.1"
requests-toolbelt = "^1.0.0"
pytz = "*"
aiohttp = "^3.8.1"
python-dateutil = "^2.8.2"
aenum = "^3.1.11"
PyYAML = "^6.0"
# typing-extensions = "<4.12.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.0"
sphinx = "*"
html2text = "^2024.2.26"
pyinstaller = "^6.11.1"
sphinx-rtd-theme = "^1.0.0"
flake8 = "^5.0.3"
pytest = "^7.1.1"
aiohttp = "^3.8.1"
PyJWT = "^2.4.0"
webexteamssdk = "^1.6.1"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.6.1"
selenium = "^4.5.0"
inflection = "^0.5.1"
test_helper = { git = "https://github.com/jeokrohn/test_helper.git" }
geopy = "^2.2.0"
backoff = "^2.2.1"
webexteamsbot = "^0.1.4"
python-dotenv = "^1.0.0"
lxml = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
