[project]
name = "wxc_sdk"
version = "1.27.1"
description = "SDK for Webex APIs with special focus on Webex Calling specific endpoints"
authors = [{ name = "Johannes Krohn", email = "jkrohn@cisco.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.rst"
license = "MIT"
maintainers = [{ name = "Johannes Krohn", email = "jkrohn@cisco.com" }]
keywords = [
    "Webex",
    "Webex Calling",
    "Webex Teams",
    "Webex Meetings",
    "Webex Devices",
    "Webex Control Hub",
    "Webex Admin",
    "Webex Site Admin",
    "Webex Site",
    "Webex Site Devices",
    "Python",
    "API",
    "SDK",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Conferencing",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "pydantic>=2.0.0,<3",
    "requests>=2.27.1,<3",
    "requests-toolbelt>=1.0.0,<2",
    "pytz",
    "aiohttp>=3.8.1,<4",
    "python-dateutil>=2.8.2,<3",
    "aenum>=3.1.11,<4",
    "PyYAML~=6.0",
    "tenacity>=8.2.3,<9",
]

[project.urls]
Homepage = "https://github.com/jeokrohn/wxc_sdk"
Documentation = "https://wxc-sdk.readthedocs.io"

[dependency-groups]
dev = [
    "setuptools>=67.6.0,<68",
    "sphinx",
    "html2text",
    "pyinstaller>=6.11.1,<7",
    "sphinx-rtd-theme>=1.0.0,<2",
    "flake8>=5.0.3,<6",
    "pytest>=7.1.1,<8",
    "aiohttp>=3.8.1,<4",
    "PyJWT>=2.4.0,<3",
    "webexteamssdk>=1.6.1,<2",
    "beautifulsoup4>=4.11.1,<5",
    "matplotlib>=3.6.1,<4",
    "selenium>=4.5.0,<5",
    "inflection>=0.5.1,<0.6",
    "test_helper",
    "geopy>=2.2.0,<3",
    "backoff>=2.2.1,<3",
    "webexteamsbot>=0.1.4,<0.2",
    "python-dotenv>=1.0.0,<2",
    "lxml>=5.4.0,<6",
    "pandas>=2.3.0,<3",
    "openpyxl>=3.1.5,<4",
    "typer>=0.20.0,<0.21",
    "email-validator>=2.3.0,<3",
    "random-address>=1.3.0",
    "responses>=0.25.0,<0.26",
]

[tool.uv]

[tool.uv.sources]
test_helper = { git = "https://github.com/jeokrohn/test_helper.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/apib",
    "/developer.webex.com",
    "/.gitignore",
    "/.readthedocs.yaml",
    "/available_numbers.md",
    "/device call settings.md",
    "/docs",
    "/open_api",
    "/PUBLISH.rst",
    "/script",
    "/TODO",
    "/user call settings.md",
    "/virtual line call settings.md",
    "workspace call settings.md"
]
