[project]
name = "wxc_sdk"
version = "1.31.1"
description = "SDK for Webex APIs with special focus on Webex Calling specific endpoints"
authors = [{ name = "Johannes Krohn", email = "jkrohn@cisco.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.rst"
license = "MIT"
maintainers = [{ name = "Johannes Krohn", email = "jkrohn@cisco.com" }]
keywords = [
    "Webex",
    "Webex Calling",
    "Webex Teams",
    "Webex Meetings",
    "Webex Devices",
    "Webex Control Hub",
    "Webex Admin",
    "Webex Site Admin",
    "Webex Site",
    "Webex Site Devices",
    "Python",
    "API",
    "SDK",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Conferencing",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "pydantic>=2.0.0,<3",
    "requests>=2.27.1,<3",
    "requests-toolbelt>=1.0.0,<2",
    "pytz",
    "aiohttp>=3.8.1,<4",
    "python-dateutil>=2.8.2,<3",
    "aenum>=3.1.11,<4",
    "PyYAML~=6.0",
]

[project.urls]
Homepage = "https://github.com/jeokrohn/wxc_sdk"
Documentation = "https://wxc-sdk.readthedocs.io"
"Bug Tracker" = "https://github.com/jeokrohn/wxc_sdk/issues"
Changelog = "https://github.com/jeokrohn/wxc_sdk/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "setuptools>=67.6.0,<68",
    "sphinx",
    "html2text",
    "pyinstaller>=6.11.1,<7",
    "sphinx-rtd-theme>=1.0.0,<2",
    "flake8>=5.0.3,<6",
    "pytest>=7.1.1,<8",
    "aiohttp>=3.8.1,<4",
    "PyJWT>=2.4.0,<3",
    "webexteamssdk>=1.6.1,<2",
    "beautifulsoup4>=4.11.1,<5",
    "matplotlib>=3.6.1,<4",
    "selenium>=4.5.0,<5",
    "inflection>=0.5.1,<0.6",
    "test_helper",
    "geopy>=2.2.0,<3",
    "backoff>=2.2.1,<3",
    "webexteamsbot>=0.1.4,<0.2",
    "python-dotenv>=1.0.0,<2",
    "lxml>=5.4.0,<6",
    "pandas>=2.3.0,<3",
    "openpyxl>=3.1.5,<4",
    "typer>=0.20.0,<0.21",
    "email-validator>=2.3.0,<3",
    "random-address>=1.3.0",
    "ruff>=0.15.5",
    "commitizen>=4.10.1",
    "pre-commit>=4.3.0",
]

[tool.uv]

[tool.uv.sources]
test_helper = { git = "https://github.com/jeokrohn/test_helper.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/wxc_sdk",
    "/CHANGELOG.md",
    "/LICENSE",
    "/Makefile",
    "/pyproject.toml",
    "/README.rst"
]

exclude = [
    "/.gitignore"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
# exclude auto-generated code from ruff formatting/linting
extend-exclude = ["open_api/generated", "wxc_sdk/as_api.py", "wxc_sdk/all_types.py"]

# exclude some directories
exclude = [
    "developer.webex.com/generated",
    "apib/tests",
    "open_api/generated",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = ["E741", 'C901']
select = [
    "E",   # pycodestyle errors (flake8 core)
    "W",   # pycodestyle warnings (flake8 core)
    "F",   # pyflakes (flake8 core)
    "C90", # mccabe complexity (flake8-mccabe)
    "I",   # isort (flake8-isort)
    # "N",   # pep8-naming (flake8-pep8-naming)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E722", "E741", "F403", "F405", "F841", "F842"]
"apib/**" = ["F403", "F841", "E731", "F821"]
"examples/*" = ["F403", "F405"]
"open_api/tests/*" = ["F841"]
"script/*" = ["E402"]
"tests/base.py" = ["E402"]
"examples/queue_agents.py" = ["F842"]
"docs/conf.py" = ["E402"]
"wxc_sdk/all_types.py" = ['I001']
"wxc_sdk/har_writer/**" = ["N815"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"   # reads/writes version in [project] table
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
    "wxc_sdk/__init__.py"
]


